i181-fix-the-vertical-align

--- a/components/com_publications/site/assets/css/custom.css
+++ b/components/com_publications/site/assets/css/custom.css
@@ -78,3 +78,7 @@ DePaul IHS
 .dataTables_scrollBody > table {
     width: 100% !important;
 }
+
+td {
+  vertical-align: baseline !important;
+}
